--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,21 @@
-on: [push]
+name: CI
+# Controles de evento para execução
+on:
+ # Atualização na branch “MASTER/MAIN” por push ou pull-request
+ push:
+  branches: [ "master" ]
+ pull_request:
+  branches: [ "master" ]
+# JOBS de atividade
 jobs:
-  build:
-   name: PrimeroJob
-   runs-on: ubuntu-latest
-   steps:
-    - uses: actions/checkout@v4
-    - name: Executando o STEP1
-      run: |
-       echo Esse processo carrega uma mensagem
-       echo basica para entender o workflow
+ # Task com nome BUILD
+ build:
+  runs-on: ubuntu-latest
+  steps:
+   - uses: actions/checkout@v4
+   - name: Run a one-line script
+     run: echo Hello, world!
+   - name: Run a multi-line script
+     run: |
+      echo Add other actions to build,
+      echo test, and deploy your project.
